// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteModal Component should render - no props 1`] = `
<t>
  <t
    sectioned={true}
  >
    <p />
    <t
      primary={true}
      size="default"
    >
      Delete
    </t>
    <t
      size="default"
    >
      Cancel
    </t>
  </t>
</t>
`;

exports[`DeleteModal Component should render closed with props 1`] = `
<t
  open={false}
>
  <t
    sectioned={true}
    title="NoobNoob"
  >
    <p>
      Got Damn
    </p>
    <t
      onClick={[Function]}
      primary={true}
      size="default"
    >
      Delete
    </t>
    <t
      onClick={[Function]}
      size="default"
    >
      Cancel
    </t>
  </t>
</t>
`;

exports[`DeleteModal Component should render open with props 1`] = `
<t
  open={true}
>
  <t
    sectioned={true}
    title="NoobNoob"
  >
    <p>
      Got Damn
    </p>
    <t
      onClick={[Function]}
      primary={true}
      size="default"
    >
      Delete
    </t>
    <t
      onClick={[Function]}
      size="default"
    >
      Cancel
    </t>
  </t>
</t>
`;
